force-app/main/default/objects/Question_Template__c/Question_Template__c.object-meta.xml
<CustomObject>
    <label>Question Template</label>
    <nameField>
        <displayFormat>QES-{000000}</displayFormat>
        <label>Question_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions_Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>