force-app/main/default/objects/Question_Template__c/fields/AnswerOptions__c.field-meta.xml
<CustomField>
    <fullName>AnswerOptions__c</fullName>
    <description>Comma-delimited list of possible, mutually-exclusive options. An Interface interprets this to render a choice for the user (such as a picklist, radio button, menu)</description>
    <inlineHelpText>Enter possible values separated by a comma. Eg. &quot;immediately,two week notice,one month notice,more than one month notice&quot;</inlineHelpText>
    <label>Answer Options</label>
    <type>TextArea</type>
</CustomField>