force-app/main/default/objects/Question_Template__c/fields/AnswerType__c.field-meta.xml
<CustomField>
    <fullName>AnswerType__c</fullName>
    <description>Informs the Interface on how to present a question to a User as well as enables Knock Out functionality (Yes/No) or possible Answer options (Picklist)</description>
    <inlineHelpText>Describe how the Applicant should Answer the Question</inlineHelpText>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
                <label>Yes/No</label>
            </value>
            <value>
                <fullName>Paragraph</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>