force-app/main/default/objects/Question_Template__c/fields/AvailableForSubmittal__c.field-meta.xml
<CustomField>
    <fullName>AvailableForSubmittal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No prevents the Question from ever being added to an email template. Yes forces inclusion (Validation) or includes if an Answer is present (Internal Interview).</description>
    <inlineHelpText>Yes, Answer will be submitted to the client if present. No, Answer will never be sent to the Client.</inlineHelpText>
    <label>Available for Submittal</label>
    <type>Checkbox</type>
</CustomField>