force-app/main/default/objects/Question_Template__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Categorizes the Question to help explain its relevant Interview style.</description>
    <inlineHelpText>Categorizes the Question to help explain its relevant Interview style</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>