force-app/main/default/objects/Question_Template__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <description>Controls which heading a Question appears underneath when Pre-Screening a Candidate</description>
    <inlineHelpText>Choose which Heading this Question should appear under during Pre-Screening</inlineHelpText>
    <label>Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Achievements</fullName>
            </value>
            <value>
                <fullName>Client Compliance</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Competence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>