force-app/main/default/objects/Question_Template__c/fields/KnockOut__c.field-meta.xml
<CustomField>
    <fullName>KnockOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether a UI warning appears when a boolean Question is answered No/False</description>
    <inlineHelpText>A warning will appear if the Answer is &quot;No&quot;</inlineHelpText>
    <label>Knock Out</label>
    <type>Checkbox</type>
</CustomField>