force-app/main/default/objects/Question_Template__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether a Question is required to be displayed and answered at the Prescreening Stage. Mandatory questions may not be deselected by a user during Job Setup. Pre-set by the global core</description>
    <inlineHelpText>When checked, this Question is required to be displayed and answered at the Prescreening Stage.</inlineHelpText>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>