force-app/main/default/objects/Question_Template__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Determines the order of a Question after organizing all Questions by Stage, Category, and then Grouping</description>
    <inlineHelpText>A higher value will be at the top of a list of Questions</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>