force-app/main/default/objects/Question_Template__c/fields/OwningEntity__c.field-meta.xml
<CustomField>
    <fullName>OwningEntity__c</fullName>
    <description>Owning Entity(s) of a Question Template; if empty then Question applies to all Opcos</description>
    <label>Owning Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Interview</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
                <isActive>false</isActive>
                <label>Validation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>