force-app/main/default/objects/Question_Template__c/fields/QuestionTextAlt__c.field-meta.xml
<CustomField>
    <fullName>QuestionTextAlt__c</fullName>
    <description>Question in alternate language</description>
    <label>Question Text - Alternate</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>