force-app/main/default/objects/Question_Template__c/fields/QuestionTextEN__c.field-meta.xml
<CustomField>
    <fullName>QuestionTextEN__c</fullName>
    <description>Presented during Pre-Screening. FUTURE STATE: made available to RCE.Question in English</description>
    <label>Question Text - EN</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>