force-app/main/default/objects/Question_Template__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Controls whether the question should appear during the Validation or Internal Interview Stage (eg. ATS modal)</description>
    <inlineHelpText>Choose which part of the Candidate process this question is relevant to</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Interview</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
                <isActive>false</isActive>
                <label>Validation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>