force-app/main/default/objects/Question_Template__c/validationRules/No_Answer_Options_when_Type_is_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Answer_Options_when_Type_is_Picklist</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  ISPICKVAL(AnswerType__c, &apos;Picklist&apos;),   
  ISBLANK(AnswerOptions__c ) 
)</errorConditionFormula>
    <errorDisplayField>AnswerOptions__c</errorDisplayField>
    <errorMessage>Answer Options must be provided if the Answer Type is &quot;Picklist&quot;</errorMessage>
</ValidationRule>