force-app/main/default/objects/Question_Template__c/validationRules/Only_YesNo_Question_can_be_a_Knock_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_YesNo_Question_can_be_a_Knock_Out</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  KnockOut__c,  
  NOT( ISPICKVAL( AnswerType__c, &apos;Yes/No&apos;) )
)</errorConditionFormula>
    <errorDisplayField>KnockOut__c</errorDisplayField>
    <errorMessage>Only a Yes/No Question can be a Knock Out</errorMessage>
</ValidationRule>