force-app/main/default/objects/Question_Template__c/validationRules/Opts_have_no_affect_if_type_is_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>Opts_have_no_affect_if_type_is_Picklist</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( 
    ISPICKVAL(AnswerType__c, &apos;Picklist&apos;)
  ),
  NOT( 
    ISPICKVAL(AnswerType__c, &apos;RadioButton&apos;)
  ),
  NOT(
    ISBLANK( AnswerOptions__c )
  )
)</errorConditionFormula>
    <errorDisplayField>AnswerOptions__c</errorDisplayField>
    <errorMessage>Answer Options will have no effect if the Answer Type is not &quot;Picklist&quot;</errorMessage>
</ValidationRule>