force-app/main/default/objects/Question_Template__c/validationRules/ValidateQuestionText.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateQuestionText</fullName>
    <active>true</active>
    <description>Validation Rule to make sure QuestionTextEN or QuestionTextAlt is entered</description>
    <errorConditionFormula>AND(ISBLANK( QuestionTextEN__c),ISBLANK( QuestionTextAlt__c))</errorConditionFormula>
    <errorMessage>Either Question Text - EN or  Question Text - Alternate is mandatory</errorMessage>
</ValidationRule>