force-app/main/default/objects/Question_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Stage__c</columns>
    <columns>Category__c</columns>
    <columns>QuestionTextEN__c</columns>
    <columns>QuestionTextAlt__c</columns>
    <columns>OwningEntity__c</columns>
    <columns>VariableSource__c</columns>
    <columns>Mandatory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>