force-app/main/default/objects/Question_Template__c/listViews/GL_AL_Question_Template_Records.listView-meta.xml
<ListView>
    <fullName>GL_AL_Question_Template_Records</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Category__c</columns>
    <columns>Grouping__c</columns>
    <columns>QuestionTextEN__c</columns>
    <columns>QuestionTextAlt__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OwningEntity__c</field>
        <operation>equals</operation>
        <value>GL-AL</value>
    </filters>
    <label>GL-AL Question Template Records</label>
</ListView>