force-app/main/default/objects/Question_Template__c/listViews/X2_SC_Question_Template_Records.listView-meta.xml
<ListView>
    <fullName>X2_SC_Question_Template_Records</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Category__c</columns>
    <columns>Grouping__c</columns>
    <columns>QuestionTextEN__c</columns>
    <columns>QuestionTextAlt__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OwningEntity__c</field>
        <operation>equals</operation>
        <value>X2-SC</value>
    </filters>
    <label>X2-SC Question Template Records</label>
</ListView>